@@ -1,3 +1,8 @@
+2008-06-25  Andreas Schwab  <schwab@suse.de>
+
+	* faces.el (face-font-family-alternatives, variable-pitch): Use
+	"Sans Serif", not "Sans-Serif".
+
 2008-06-24  Chong Yidong  <cyd@stupidchicken.com>
 
 	* faces.el (face-font-family-alternatives, variable-pitch): Change
